--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,17 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+ 
+}
+html, body{
+  height:100%;
+}
+#root{
+  height:100%;
+}
 .App {
+  height:100%;
   text-align: center;
 }
 
