--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,9 @@ html, body{
   text-align: center;
   background-color: #eee;
 }
-
+input{
+  text-align:right;
+}
 
 .am-list-item.am-input-item{
   padding-right:15px;
