--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,9 @@ html, body{
 .align-left{
   text-align: left;
 }
+.align-right{
+  text-align: right;
+}
+.align-right input{
+  text-align: right;
+}
